k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gs08
  labels:
    app.kubernetes.io/part-of: gs08-matriculas
    entorno: local
